# underkate.rs

./: Cargo.toml
assets/pass-maps/overworld/rooms/home/room/: pass-map.toml
assets/rooms/_stub/: room.toml
assets/rooms/home/room/: room.toml
assets/scripts/overworld/rooms/home/room/init/: main.rs  script.toml
assets/textures/overworld/player/front/: texture.toml
assets/textures/overworld/player/leftward/: texture.toml
assets/textures/overworld/rooms/_stub/bg/: texture.toml
assets/textures/overworld/rooms/home/room/pass/: texture.toml
src/: app.rs  geometry.rs  graphics.rs  main.rs  overworld.rs  resources.rs  screen.rs  ui_event.rs
src/graphics/: texture.rs
src/overworld/: collide.rs  direction_textured.rs  geometry.rs  hitbox.rs  move_trait.rs  multiwalk.rs  player.rs  screen.rs  walk.rs
underkate/: Cargo.toml  README.md  build.rs
underkate/src/: app.rs  default_runtime.rs  dialog.rs  game_context.rs  geometry.rs  graphics.rs  handle.rs  main.rs  overworld.rs  resources.rs  screen.rs  script.rs  ui_event.rs
underkate/src/graphics/: texture.rs
underkate/src/overworld/: collide.rs  hitbox.rs  multiside.rs  multiwalk.rs  pass_map.rs  passability_checker.rs  player.rs  room.rs  screen.rs  walk.rs
underkate/src/overworld/pass_map/: bitmap_pass_map.rs
underkate/src/script/: rust_script.rs
underkate_tools/: Cargo.toml
underkate_tools/src/: args.rs  codegen.rs  common.rs  file.rs  lib.rs  pass_map.rs  room.rs  rust_script.rs  texture.rs
