[package]
name = "underkate"
version = "0.1.0"
authors = ["Alexander Korzun <sahhash33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0"
euclid = "0.22.6"
include_dir = "0.6.1"
paste = "1.0.5"
